public/stylesheets/site.css
html {
  background: #992b2b url(/images/bg.jpg) no-repeat fixed 100% 0;
}

body {
  font-family: "Allerta", Arial, "MS Trebuchet", sans-serif;
  font-size: 40.5%;
  line-height: 1.25em;
  color: #F1F1F1;
}

a {
  color: #5B6966;
  text-decoration: underline;
}
a:hover {
  color: #81B3A8;
  text-decoration: none;
  -webkit-transition: all .2s linear;
     -moz-transition: all .2s linear;
}
a:active {
/*  text-shadow: 0 0 3px #CCC;*/
}

em { font-style: italic; }

h1, h2, h3, h4, h5, h6, strong { font-weight: bold; }
h1, h2, h3, h4, h5, h6 {
  margin: 1em 0;
}

h1 { font-size: 160%; }
h2 { font-size: 150%; }
h3 { font-size: 140%; }
h4 { font-size: 130%; }
h4 { font-size: 130%; }
h5 { font-size: 120%; }
h6 { font-size: 110%; }

p, ol, ul, dd, dt {
  margin: 1em 0;
}

ol li, ul li {
  padding: .2em 0;
  margin-left: .9em;
}
ol li {
  list-style-type: decimal;
  margin-left: 2.25em;
}

code {
  font-size: 1.25em;
}

.fake_table {
  display: table;   /* Allow the centering to work */
  margin: 0 auto;
}


#wrapper {
  position: relative;
  width: 75%;
  margin: 0 auto;
  font-size: 150%;
}
#header, 
#header .container {
  -webkit-border-bottom-right-radius: 4px;
  -webkit-border-bottom-left-radius: 4px;
  -moz-border-radius-bottomright: 4px;
  -moz-border-radius-bottomleft: 4px;
  border-bottom-right-radius: 4px;
  border-bottom-left-radius: 4px;
}
#header {
  position: fixed;
  width: 73.75%;
  margin: 0 auto;
  color: #fff;
  background: rgba(242, 242, 242, 0.3);
  padding: 0 1em 1em 1em;
  -webkit-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
     -moz-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
          box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
  z-index: 1000;
}
#header .container {
  position: relative;
  background: #F1F1F1 url(/images/header_bg.jpg) repeat scroll 0 0;
  padding: 1.2em 1em .75em 1em;
  border: 1px solid #CCC;
  border-top: 0;
  z-index: 1000;
}
#header h1 {
  position: relative;
  background: transparent url(/images/ruby.png) no-repeat scroll 42% 58%;
  font-family: 'Cherry Cream Soda', Arial, serif;
  font-size: 600%;
  line-height: 1.25em;
  margin: 0;
  padding: 0;
  text-shadow: 1px 1px 3px #333;
  text-align: center;
  z-index: 200;
}
#header h1 span {
  margin-right: -7px;
}
#header h1 .char6 {
  margin-left: 20px;
}


#page {
  position: relative;
  width: auto;
  background: transparent;
  min-height: 100%;
  font-size: 1.25em;
  margin: 0 0 5% 0;
  padding: 0;
  -webkit-border-bottom-right-radius: 5px;
   -webkit-border-bottom-left-radius: 5px;
      -moz-border-radius-bottomright: 5px;
       -moz-border-radius-bottomleft: 5px;
          border-bottom-right-radius: 5px;
           border-bottom-left-radius: 5px;
  z-index: 100;
}

#content {
  position: relative;
  background: transparent;
  padding: 12em .5em .5em .5em;
  z-index: 100;
}

#content table {
  width: 100%;
  border-spacing: 0;
  -webkit-border-bottom-right-radius: 5px;
   -webkit-border-bottom-left-radius: 5px;
      -moz-border-radius-bottomright: 5px;
       -moz-border-radius-bottomleft: 5px;
          border-bottom-right-radius: 5px;
           border-bottom-left-radius: 5px;
  -webkit-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
     -moz-box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
          box-shadow: 2px 1px 2px rgba(40,40,40,0.4);
}
#content table th,
#content table td {
  border-top: 1px solid #AAA;
  background-color: rgba(255,255,255,0.82);
  text-align: center;
width: 25%;
padding-right: 10%;
padding-left: 10%;
}
#content table th {
  color: #992B2B;
  font-size: 150%;
  line-height: 1.5em;
  padding-top: .25em;
}

#content table td {
  padding: 24px;
}

#content table td.first { 
  width: 35%;
  vertical-align: top;
  padding: 0;
  text-align: left;
  -webkit-border-bottom-left-radius: 5px;
      -moz-border-radius-bottomleft: 5px;
          border-bottom-left-radius: 5px;
}
#content table td.last {
  -webkit-border-bottom-right-radius: 5px;
      -moz-border-radius-bottomright: 5px;
          border-bottom-right-radius: 5px;
}

#content table tr.last td {
  border-bottom: none;
}
#content li.account {
  margin: 0 10em 7em 10em;
}
.account .container {
  position: relative;
  min-height: 58px;
}
.account .username {
  display: inline;
  position: relative;
  background-color: #F1F1F1;
  top: 2.2em;
  left: 1.1em;
  padding: .2em;
  margin: 0;
  font-size: 200%;
  line-height: 1.1em;
  color: #5B6966;
  border-top: 1px solid #F1F1F1;
  border-left: 1px solid #F1F1F1;
  text-shadow: -1px 1px solid #AAA;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
     -moz-box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
          box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
  z-index: 400;
}


.account .names {
  color: #5B6966;
}
.account .sites li,
.account .books li {
  margin-left: 0;
}
.account .sites li a,
.account .books li a {
  display: block;
  line-height: 1.25em;
}

.account .services ul {
  min-width: 160px;
  margin: 0 auto;
}
.account .services li {
  display: inline;
}
#content .account li.nickname,
#content .account li.service,
#content .account li.book {
  padding: .25em 0;
  line-height: 1em;
}
#content .account li.service {
  padding: 0;
  display: inline;
  margin-right: .35em;
}
#content .account li.service a:hover {
  opacity: .70;
}


.image-wrapper {
  position: absolute;
  top: -6.6em;
  left: -3em;
  height: 120px;
  z-index: 300;
}

.image-wrapper img {
  height: 100%;
  margin: 0 auto;
  border: 3px solid #AAA;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
     -moz-box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
          box-shadow: 2px 1px 3px rgba(40,40,40,0.2);
}

.ribbon {
  background-color: #a00;
  overflow: hidden;
  position: fixed;
  left: -5em;
  top: 3.4em;
  -moz-transform: rotate(-45deg);
  -webkit-transform: rotate(-45deg);
  -moz-box-shadow: 0 0 1em #888;
  -webkit-box-shadow: 0 0 1em #888;
  z-index: 1000;
}
.ribbon a {
  border: 1px solid #faa;
  color: #fff;
  display: block;
  font: bold 175% 'Helvetiva Neue', Helvetica, Arial, sans-serif;
  margin: .05em 0 .075em 0;
  padding: .5em 3.5em;
  text-align: center;
  text-decoration: none;
  text-shadow: 0 0 .5em #444;
}


#footer {
  margin-bottom: 7px;
  text-align: center;
  line-height: 1em;
  text-shadow: 1px 1px 1px #333;
}
#footer a {
  color: #B38181;
  font-size: 135%;
  line-height: 1.5em;
}
#footer a:hover {
  color: #FFDEDE;
}

